syntax="proto3";

package proto;

option go_package=".";

service Transaction {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateTransaction(UpdateTransactionRequest) returns (UpdateTransactionResponse) {}
}

message User {
  string login = 1;
  string password = 2;
  string balance = 3;
}

message CreateUserRequest {
  User user = 1;
}
message CreateUserResponse {
  User user = 1;
}

message UpdateTransactionRequest {
  User user = 1;
}
message UpdateTransactionResponse{
  User user = 1;
}